--- a/demo/proplanr-repeat-horizontal.html
+++ b/demo/proplanr-repeat-horizontal.html
@@ -16,13 +16,13 @@
 		<link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
 		<link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
 		<link rel="import" href="../../polymerfire/firebase-app.html">
-		<link rel="import" href="../proplanr-repeat.html">
+		<link rel="import" href="../proplanr-repeat-horizontal.html">
 		<link rel="import" href="demo-selector.html">
 
 		<custom-style include="demo-pages-shared-styles">
 			<style is="custom-style" include="demo-pages-shared-styles">
 				.vertical-section-container {
-					max-width: 550px;
+					max-width: 980px;
 				}
 			</style>
 		</custom-style>
@@ -30,12 +30,12 @@
 
 	<body unresolved>
 		<div class="vertical-section-container centered">
-			<h3>Basic proplanr-repeat demo</h3>
-			<demo-selector demo="Proplanr Repeat"></demo-selector>
+			<h3>Basic proplanr-repeat-horizontal demo</h3>
+			<demo-selector demo="Proplanr Repeat Horizontal"></demo-selector>
 
 			<demo-snippet>
 				<template>
-					<proplanr-repeat></proplanr-repeat>
+					<proplanr-repeat-horizontal></proplanr-repeat-horizontal>
 				</template>
 			</demo-snippet>
 		</div>
