icons show in p2

--- a/proplanr-repeat-list-firebase.html
+++ b/proplanr-repeat-list-firebase.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../vaadin-grid/vaadin-grid.html">
 <link rel="import" href="proplanr-icons.html">
 <link rel="import" href="proplanr-repeat-horizontal.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <dom-module id="proplanr-repeat-list-firebase">
   <template>
