--- a/proplanr-icons.html
+++ b/proplanr-icons.html
@@ -1,3 +1,4 @@
+<linl rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html">
 
 <iron-iconset-svg name="proplanr-icons" size="24">
