--- a/proplanr-repeat-horizontal.html
+++ b/proplanr-repeat-horizontal.html
@@ -81,7 +81,7 @@
         width: 185px;
       }
       
-      .endOn {
+      #endOnVDP {
         position:relative;
         margin-top: -5px;
         /* left: 70px; */
@@ -143,7 +143,7 @@
       }
 
       .endOnP2 {
-        margin-top: 25px;
+        margin-top: 25px!important;
       }
 
       .afterContainerP2  {
@@ -192,7 +192,7 @@
           </div>
 
           <div class="flex-item btmRow" hidden$="{{hideEndOn}}">
-            <vaadin-date-picker class="endOn" value="{{repeatData.end_on}}" class$="endOnP2" min="{{repeatData.start_on}}" disabled></vaadin-date-picker>
+            <vaadin-date-picker id="endOnVDP" value="{{repeatData.end_on}}" class="endOnP2" min="{{repeatData.start_on}}" disabled></vaadin-date-picker>
           </div>
 
           <div class="flex-item btmRow" hidden$="{{hideAfter}}">
@@ -223,6 +223,7 @@
         */
         repeatData: {
           type: Object,
+          notify: true,
           value: function() {
             return {};
           }
@@ -255,12 +256,12 @@
         if (Polymer.Element) {
           polymerVersion = '2.x';
           this.toggleClass('datePickerP2',true,this.$.startOn);
-          this.toggleClass('endOnP2',true,this.$.endOn);
+          this.toggleClass('endOnP2',true,this.$.endOnVDP);
           this.toggleClass('afterContainerP2',true,this.$.afterContainer);
         } else {
           polymerVersion = '1.x';
           this.toggleClass('datePickerP2',false,this.$.startOn);
-          this.toggleClass('endOnP2',false,this.$.endOn);
+          this.toggleClass('endOnP2',false,this.$.endOnVDP);
           this.toggleClass('afterContainerP2',false,this.$.afterContainer);
         }
         console.log('ready:',polymerVersion);
@@ -311,14 +312,18 @@
         this.async(function() {
           this.textFilter = '';
           if (this.repeatData.ends === 'on') {
-            this.$.endOn.disabled = false;
-            this.$.afterOccurrencesInput.disabled = true;
+            this.async(function() {
+              this.$.endOnVDP.disabled = false;
+              this.$.afterOccurrencesInput.disabled = true;
+            },100);
             this.set('hideEndOn', false);
             this.set('hideAfter', true);
             this.set('repeatData.after_occurrences', 0);
           } else if (this.repeatData.ends === 'after') {
-            this.$.endOn.disabled = true;
-            this.$.afterOccurrencesInput.disabled = false;
+            this.async(function() {
+              this.$.endOnVDP.disabled = true;              
+              this.$.afterOccurrencesInput.disabled = false;
+            },100);
             this.set('hideEndOn', true);
             this.set('hideAfter', false);
             this.set('repeatData.end_on', "");
