--- a/proplanr-repeat-horizontal.html
+++ b/proplanr-repeat-horizontal.html
@@ -163,7 +163,7 @@
     
     <h2>ProPlanr-repeat default: [[repeats]]!</h2>
     <iron-form>
-      <form id="repeatForm" method="get" action="/form/handler">
+      <form id="repeatForm" method="get" action="/form/handler" disabled>
         <div class="flex-container center">
           <div class="flex-item topRow">
             <paper-input id="titleInput" value="{{repeatData.title}}" label="Title"></paper-input>
