--- a/proplanr-repeat-list-firebase.html
+++ b/proplanr-repeat-list-firebase.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../paper-dialog/paper-dialog.html">
+<link rel="import" href="../paper-fab/paper-fab.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../polymerfire/firebase-document.html">
 <link rel="import" href="../polymerfire/firebase-query.html">
@@ -62,6 +63,14 @@
       .title {
         width: 150px;
       }
+      #addRepeat {
+        margin-top: -30px;
+        margin-left: 14px;
+        z-index: 100;
+      }
+      #repeatsGrid {
+        margin-top: -8px;
+      }
     </style>
 
     <firebase-query
@@ -90,7 +99,7 @@
       </div>
     </paper-dialog>
 
-    <paper-fab mini icon="proplanr-icons:add" title="add"></paper-fab>
+    <paper-fab mini id="addRepeat" icon="proplanr-icons:add" title="add"></paper-fab>
 
     <vaadin-grid id="repeatsGrid" items="{{repeatsData}}" style="height: auto" active-item="{{activeItem}}" on-active-item-changed="_onActiveItemChanged">
 
