--- a/proplanr-repeat-list-firebase.html
+++ b/proplanr-repeat-list-firebase.html
@@ -88,7 +88,13 @@
       data="{{actionsData}}">
     </firebase-query>
     
-    <proplanr-repeat-horizontal id="repeatForm" save-update-add="{{updateSave}}" form-disabled="{{disableForm}}"></proplanr-repeat-horizontal>
+    <proplanr-repeat-horizontal 
+      id="repeatForm" 
+      save-update-add="{{updateSave}}" 
+      form-disabled="{{disableForm}}"
+      hide-end-on="{{hideEndOn}}"
+      hide-after="{{hideAfter}}">
+    </proplanr-repeat-horizontal>
 
     <paper-dialog id="dialogDelete">
       <h2 id="dialogHeader">Delete Repeat?</h2>
@@ -166,7 +172,8 @@
         is: 'proplanr-repeat-list-firebase', 
 
         listeners: {
-        'saveRepeat': 'saveData'
+        'saveRepeat': 'saveData',
+        'updateRepeat': 'updateRepeatDb'
         },
 
         properties: {
@@ -192,6 +199,14 @@
             type: Boolean,
             value: true,
             notify: true
+          },
+          hideEndOn: {
+            type: Boolean,
+            value: false
+          },
+          hideAfter: {
+            type: Boolean,
+            value: true
           }
         },
 
@@ -241,11 +256,10 @@
           }
           this.$.repeatForm.repeatData = '';
           this.$.repeatForm.repeatData = data;
-          this.updateSave = "Update";
+          this.updateSave = "UPDATE";
           this.disableForm = false;
-
           this.fire('editRepeat', data);
-          // console.log('editRepeat:',this.$.repeatForm.repeatData);
+          console.log('editRepeat:', data);
         },
         
         promptDelete: function(event) {
@@ -268,23 +282,26 @@
           this.db.ref('/repeats').push(data.detail).then(snapshot => {
             let repeat_key = snapshot.key;
             let repeat = data.detail;
-            // add actions for number occurrencies or end date
-            if (repeat.ends === 'after') {
-              let every = repeat.repeat_every;
-              this.saveActions(every,repeat,repeat_key);
-            } else if(repeat.ends === 'on') {
-              let start = moment(repeat.start_on);
-              let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
-              let calculate = end.diff(start, repeat.repeat_frequence);
-              repeat.after_occurrences = calculate / repeat.repeat_every;
-              this.db.ref('/repeats/' + repeat_key).update({
-                after_occurrences: Math.ceil(calculate / repeat.repeat_every,
-              )});
-              this.saveActions(repeat.repeat_every, repeat, repeat_key);
-            } else {
-              console.log("nothing");
-            }     
+            this.calculateActions(repeat, repeat_key);
           });
+        },
+
+        calculateActions: function(repeat, repeat_key) {
+          if (repeat.ends === 'after') {
+            let every = repeat.repeat_every;
+            this.saveActions(every,repeat,repeat_key);
+          } else if(repeat.ends === 'on') {
+            let start = moment(repeat.start_on);
+            let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
+            let calculate = end.diff(start, repeat.repeat_frequence);
+            repeat.after_occurrences = calculate / repeat.repeat_every;
+            this.db.ref('/repeats/' + repeat_key).update({
+              after_occurrences: Math.ceil(calculate / repeat.repeat_every,
+            )});
+            this.saveActions(repeat.repeat_every, repeat, repeat_key);
+          } else {
+            console.log("nothing");
+          } 
         },
 
         saveActions: function(every,repeat,repeat_key) {
@@ -301,8 +318,16 @@
             });
           }
           this.disableForm = true;
-          this.saveUpdatePrompt = 'ADD';
-          this.cancelRepeat();
+          this.updateSave = 'ADD';
+        },
+
+        updateRepeatDb: function(data) {
+          let updateKey = data.detail.$key;
+          console.log("/repeats/" + updateKey);
+          this.db.ref("/repeats/" + updateKey).update(data.detail).then(snapshot => {
+            console.log(snapshot);
+          });
+          console.log("update db");
         }
 
       });
