Partial fix for update

--- a/proplanr-repeat-horizontal.html
+++ b/proplanr-repeat-horizontal.html
@@ -374,7 +374,7 @@
       },
 
       updateRepeat: function(data){
-        console.log("update repeat: ", this.repeatData);
+        // console.log("update repeat: ", this.repeatData);
         this.fire('updateRepeat', this.repeatData);
       }
 
