--- a/proplanr-repeat-list-firebase.html
+++ b/proplanr-repeat-list-firebase.html
@@ -258,7 +258,7 @@
           this.$.repeatForm.repeatData = data;
           this.updateSave = "UPDATE";
           this.disableForm = false;
-          this.$.repeatForm.enableForm(data);
+          this.$.repeatForm.onSelectedEnds(data);
           // this.fire('editRepeatEvent', data);
           console.log('editRepeat:', data);
         },
@@ -284,14 +284,33 @@
             let repeat_key = snapshot.key;
             let repeat = data.detail;
             this.calculateActions(repeat, repeat_key);
+          //   if (repeat.ends === 'after') {
+          //   console.log("test calculate after");
+          //   let every = repeat.repeat_every;
+          //   this.saveActions(every,repeat,repeat_key);
+          // } else if(repeat.ends === 'on') {
+          //   console.log("test calclulate end on");
+          //   let start = moment(repeat.start_on);
+          //   let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
+          //   let calculate = end.diff(start, repeat.repeat_frequence);
+          //   repeat.after_occurrences = calculate / repeat.repeat_every;
+          //   this.db.ref('/repeats/' + repeat_key).update({
+          //     after_occurrences: Math.ceil(calculate / repeat.repeat_every,
+          //   )});
+          //   this.saveActions(repeat.repeat_every, repeat, repeat_key);
+          // } else {
+          //   console.log("nothing");
+          // } 
           });
         },
 
         calculateActions: function(repeat, repeat_key) {
           if (repeat.ends === 'after') {
+            console.log("test calculate after");
             let every = repeat.repeat_every;
             this.saveActions(every,repeat,repeat_key);
           } else if(repeat.ends === 'on') {
+            console.log("test calclulate end on");
             let start = moment(repeat.start_on);
             let end = moment(repeat.end_on).add(1, repeat.repeat_frequence);
             let calculate = end.diff(start, repeat.repeat_frequence);
@@ -306,7 +325,7 @@
         },
 
         saveActions: function(every,repeat,repeat_key) {
-          console.log("saveActions");
+          console.log("saveActions", repeat);
           let due_date = repeat.start_on;
           for(let i = 0; i < repeat.after_occurrences; i++) {
             if (i > 0) {
@@ -317,6 +336,7 @@
               title: repeat.title,
               due_date: moment(due_date).format("YYYY-MM-DD")
             });
+            console.log("test save actions");
           }
           this.disableForm = true;
           this.updateSave = 'ADD';
@@ -324,16 +344,56 @@
 
         updateRepeatDb: function(data) {
           let updateKey = data.detail.$key;
-          console.log("/repeats/" + updateKey);
           this.db.ref("/repeats/" + updateKey).update({
-            title: data.detail.title,
-            // add additional fields to be updated (JMW)
+            after_occurrences: data.detail.after_occurrences,
+            end_on: data.detail.end_on,
+            ends: data.detail.ends,
+            repeat_every: data.detail.repeat_every,
+            repeat_frequence: data.detail.repeat_frequence,
+            start_on: data.detail.start_on,
+            title: data.detail.title
+            }).then(this.updateActions(data));
+          },
 
-            }).then(snapshot => {
-            console.log(snapshot);
-          });
-          console.log("update db");
-        }
+          updateActions: function(data) {
+            console.log('update actions');
+            let repeatKey = data.detail.$key;
+            let update = this.db.ref('/actions').orderByChild("repeat_key").equalTo(repeatKey).on('child_added', function(snapshot) {
+              snapshot.ref.remove();
+              console.log('remove actions');
+              // snapshot.forEach(function(childSnapshot) { 
+              //   console.log(childSnapshot.val());
+              //   if(childSnapshot.val().repeat_key === repeatKey) {
+              //     childSnapshot.ref.remove();
+              //     // console.log("found match");
+              //   }
+            });
+            this.db.ref('/actions').off('child_added', update);
+            this.calculateActions(data.detail, repeatKey);
+            console.log("updateActions: ", data.detail);
+            this.updateSave = "ADD";
+            this.disableForm = true;
+            this.$.repeatForm.cancelRepeat();  
+              // this.db.ref('/actions').on();
+          },
+
+          // setActions: function(every, repeat, repeat_key){} {
+          //   console.log("saveActions", repeat);
+          //   let due_date = repeat.start_on;
+          //   for(let i = 0; i < repeat.after_occurrences; i++) {
+          //     if (i > 0) {
+          //       due_date = moment(due_date).add(every, repeat.repeat_frequence);
+          //   }
+          //     this.db.ref('/actions').orderByChild("repeat_key").equalTo(repeat_key).set({
+          //       repeat_key: repeat_key,
+          //       title: repeat.title,
+          //       due_date: moment(due_date).format("YYYY-MM-DD")
+          //     });
+          //   console.log("test save actions");
+          //   }
+          //   this.disableForm = true;
+          //   this.updateSave = 'ADD';
+          // }
 
       });
   </script>
